--- a/index.html
+++ b/index.html
@@ -12,17 +12,47 @@
 </head>
 
 <body>
-    
-        <h1 class="home_header_1">CODE LIKE A <span class="home_header_1_yellow">PRO</span><br>
-            Learn, Code, Create, Repeat</h1>
-        <h1 class="home_header_2">Dive into the exciting world of coding with our interactive courses, hands-on <br> projects, and
-            expert-led tutorials. Whether you're a total beginner or a seasoned <br> pro, we have something for
-            everyone!</h1>
-    
-        <button class="start_btn"> Get Started <i class='bx bxs-right-arrow-alt bx-fade-right-hover'
-                id="st_btn"></i></button>
+    <div class="image"></div>
+    <div class="main_section">
 
+        <!-- <img src="assets/360_F_286779578_lLmTnvaIP6oxRK6gTVSmxfBfw1eLUQm5-transformed 1.jpg" alt="main background" class="main_bg"> -->
 
+        <nav>
+            <input type="checkbox" id="check">
+            <label for="check" class="icons">
+
+                <i class='bx bx-menu' id="menu_icon"></i>
+                <i class='bx bx-x' id="close_icon"></i>
+            </label>
+            <div class="logo"><a href="#">CodeLK</a></div>
+
+            <ul class="nav_links" id="navco">
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Pricing</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Contacts</a></li>
+                <li><a href=""><button class="login_btn">Login</button></a></li>
+            </ul>
+        </nav>
+        <!-- <div class="main_text"> -->
+            <div class="home_header_1">
+                <p>CODE LIKE A <span class="home_header_1_yellow">PRO</span><br>
+                    Learn, Code, Create, Repeat</p>
+            </div>
+            <div class="home_header_2">
+                <p>Dive into the exciting world of coding with our interactive courses, hands-on <br> projects, and
+                    expert-led tutorials. Whether you're a total beginner or a seasoned <br> pro, we have something for
+                    everyone!</p>
+            </div>
+            <div>
+                <button class="start_btn"> Get Started <i class='bx bxs-right-arrow-alt bx-fade-right-hover'
+                        id="st_btn"></i></button>
+
+            </div>
+        <!-- </div> -->
+
+    </div>
 </body>
 
 </html>
