--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-    <div class="image"></div>
     <div class="main_section">
 
         <!-- <img src="assets/360_F_286779578_lLmTnvaIP6oxRK6gTVSmxfBfw1eLUQm5-transformed 1.jpg" alt="main background" class="main_bg"> -->
@@ -35,24 +34,37 @@
                 <li><a href=""><button class="login_btn">Login</button></a></li>
             </ul>
         </nav>
-        <!-- <div class="main_text"> -->
-            <div class="home_header_1">
-                <p>CODE LIKE A <span class="home_header_1_yellow">PRO</span><br>
-                    Learn, Code, Create, Repeat</p>
-            </div>
-            <div class="home_header_2">
-                <p>Dive into the exciting world of coding with our interactive courses, hands-on <br> projects, and
-                    expert-led tutorials. Whether you're a total beginner or a seasoned <br> pro, we have something for
-                    everyone!</p>
-            </div>
-            <div>
-                <button class="start_btn"> Get Started <i class='bx bxs-right-arrow-alt bx-fade-right-hover'
-                        id="st_btn"></i></button>
+        <div class="home_header_1">
+            <p>CODE LIKE A <span class="home_header_1_yellow">PRO</span><br>
+                Learn, Code, Create, Repeat</p>
+        </div>
+        <div class="home_header_2">
+            <p>Dive into the exciting world of coding with our interactive courses, hands-on <br> projects, and
+                expert-led tutorials. Whether you're a total beginner or a seasoned <br> pro, we have something for
+                everyone!</p>
+        </div>
+        <div>
+            <button class="start_btn"> Get Started <i class='bx bxs-right-arrow-alt bx-fade-right-hover'
+                    id="st_btn"></i></button>
 
-            </div>
-        <!-- </div> -->
+        </div>
 
     </div>
+
+    <!------------ SECOND PAGE ---------------------->
+
+    <div class="second_page">
+        <h1 class="second_page_header_1"> Welcome To <br>CodeLK</h1>
+        <div class="contain">
+            <div class="double_image">
+                <div class="first_image"></div>
+                <div class="second_image"></div>
+            </div>
+            <div class="login_form">
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
