--- a/index.html
+++ b/index.html
@@ -61,6 +61,19 @@
                 <div class="second_image"></div>
             </div>
             <div class="login_form">
+                <H1 class="form_header">Login</H1>
+                <form action="">
+                    <label for="Name">Username</label><br>
+                    <input type="text" name="name" placeholder="Enter your username" required /><br />
+                    <label for="Name">Password</label><br>
+                    <input type="text" name="password" placeholder="Enter your password" required /><br />
+                    <div class="form_footer">
+                        <h1 class="form_footer_text">Create account</h1>
+                        <h1 class="form_footer_text">Forgot password ?</h1>
+                    </div>
+
+                    <button class="form_btn">Login</button>
+                </form>
             </div>
         </div>
     </div>
