--- a/index.html
+++ b/index.html
@@ -71,9 +71,28 @@
                         <h1 class="form_footer_text">Create account</h1>
                         <h1 class="form_footer_text">Forgot password ?</h1>
                     </div>
-
                     <button class="form_btn">Login</button>
                 </form>
+            </div>
+        </div>
+    </div>
+    <div class="third_page">
+        <h1 class="third_page_header_1" >Why are you using <br>CodeLK ?</h1>
+        <div class="third_container">
+            <div class="box1">
+                <h1 class="box_header">Fun Learning</h1>
+                <img src="/assets/learn.png" alt="Fun Learning" class="box_image">
+                <h1 class="box_text">Enjoy learning with interactive lessons and coding challenges that make mastering coding concepts engaging and rewarding.</h1>
+            </div>
+            <div class="box2">
+                <h1 class="box_header">Guidance</h1>
+                <img src="/assets/guide.png" alt="Guidance" class="box_image">
+                <h1 class="box_text">Enjoy learning with interactive lessons and coding challenges that make mastering coding concepts engaging and rewarding.</h1>
+            </div>
+            <div class="box3">
+                <h1 class="box_header">Earn Certificate</h1>
+                <img src="/assets/certificate.png" alt="Earn Certificate" class="box_image">
+                <h1 class="box_text">Earn certifications and badges. Showcase on resumes, LinkedIn, or portfolios to demonstrate coding expertise to employers.</h1>
             </div>
         </div>
     </div>
