--- a/index.html
+++ b/index.html
@@ -96,7 +96,57 @@
             </div>
         </div>
     </div>
+    <div class="fourth_page">
+        <h1 class="fourth_page_header_1">Price</h1>
+        <h1 class="fourth_page_text_1">Unlock your coding potential with our flexible pricing plans designed to fit your budget and learning needs</h1>
+        <div class="price_table">
+            <table>
+                <tr>
+                    <th>Free</th>
+                    <th>Starter</th>
+                    <th>Pro</th>
+                </tr>
+                <tr class="data_row">
+                    <td>5 Free AI prompts</td>
+                    <td>Unimited Access(AI)</td>
+                    <td>Unimited Access(AI)</td>
+                </tr>
+                <tr class="data_row">
+                    <td>1 Course</td>
+                    <td>10 Courses</td>
+                    <td>Unimited Courses</td>
+                </tr>
+                <tr class="data_row">
+                    <td>Limited Quizzes</td>
+                    <td>Unimited Quizzes</td>
+                    <td>Unimited Quizzes</td>
+                </tr>
+                <tr class="data_row">
+                    <td></td>
+                    <td>E-Certificate</td>
+                    <td>Physical Certificate</td>
+                </tr>
+                <tr class="data_row">
+                    <td></td>
+                    <td>Dev Tools</td>
+                    <td>Diploma</td>
+                </tr>
+                <tr class="data_row">
+                    <td></td>
+                    <td></td>
+                    <td>All Dev Tools</td>
+                </tr>
+                <tr class="table_footer">
+                    <td>$0</td>
+                    <td>$50</td>
+                    <td>$150</td>
+                </tr>
 
+            </table>
+        </div>
+        <h1 class="fourth_page_footer">🚀 Ready to get started? Sign Up or Contact us for more information.</h1>
+    </div>
 </body>
+
 
 </html>
