--- a/index.html
+++ b/index.html
@@ -77,28 +77,32 @@
         </div>
     </div>
     <div class="third_page">
-        <h1 class="third_page_header_1" >Why are you using <br>CodeLK ?</h1>
+        <h1 class="third_page_header_1">Why are you using <br>CodeLK ?</h1>
         <div class="third_container">
             <div class="box1">
                 <h1 class="box_header">Fun Learning</h1>
                 <img src="/assets/learn.png" alt="Fun Learning" class="box_image">
-                <h1 class="box_text">Enjoy learning with interactive lessons and coding challenges that make mastering coding concepts engaging and rewarding.</h1>
+                <h1 class="box_text">Enjoy learning with interactive lessons and coding challenges that make mastering
+                    coding concepts engaging and rewarding.</h1>
             </div>
             <div class="box2">
                 <h1 class="box_header">Guidance</h1>
                 <img src="/assets/guide.png" alt="Guidance" class="box_image">
-                <h1 class="box_text">Enjoy learning with interactive lessons and coding challenges that make mastering coding concepts engaging and rewarding.</h1>
+                <h1 class="box_text">Enjoy learning with interactive lessons and coding challenges that make mastering
+                    coding concepts engaging and rewarding.</h1>
             </div>
             <div class="box3">
                 <h1 class="box_header">Earn Certificate</h1>
                 <img src="/assets/certificate.png" alt="Earn Certificate" class="box_image">
-                <h1 class="box_text">Earn certifications and badges. Showcase on resumes, LinkedIn, or portfolios to demonstrate coding expertise to employers.</h1>
+                <h1 class="box_text">Earn certifications and badges. Showcase on resumes, LinkedIn, or portfolios to
+                    demonstrate coding expertise to employers.</h1>
             </div>
         </div>
     </div>
     <div class="fourth_page">
         <h1 class="fourth_page_header_1">Price</h1>
-        <h1 class="fourth_page_text_1">Unlock your coding potential with our flexible pricing plans designed to fit your budget and learning needs</h1>
+        <h1 class="fourth_page_text_1">Unlock your coding potential with our flexible pricing plans designed to fit your
+            budget and learning needs</h1>
         <div class="price_table">
             <table>
                 <tr>
@@ -145,6 +149,26 @@
             </table>
         </div>
         <h1 class="fourth_page_footer">🚀 Ready to get started? Sign Up or Contact us for more information.</h1>
+    </div>
+    <div class="contact_page">
+        <h1 class="contact_page_header_1">Contact Us</h1>
+        <div class="contact_info">
+            <div class="contact_image"></div>
+            <div class="social_links">
+                    <p class="links_header">Social Links</p>
+                    <i class='bx bxl-linkedin-square'></i><a href="">linkedln.com/in/codeLK</a><br><br>
+                    <i class='bx bxl-facebook-circle'></i><a href="">facebook.com/codeLK</a><br><br>
+                    <i class='bx bxl-gmail'></i><a href="">codelk@gmail.com</a>
+            </div>
+            <div class="address">
+                <p class="links_header">Address</p>
+                <i class='bx bxs-map' style='color:#ffffff' ></i><a href="">No.100 <br>&nbsp;&nbsp;&nbsp;&nbsp; Colombo<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sri Lanka</a>
+            </div>
+            <div class="contact_no">
+                <p class="links_header">Contact No</p>
+                <i class='bx bxs-phone'></i><a href="">+94 77 123 4567</a>
+            </div>
+        </div>
     </div>
 </body>
 
