--- a/index.html
+++ b/index.html
@@ -155,21 +155,70 @@
         <div class="contact_info">
             <div class="contact_image"></div>
             <div class="social_links">
-                    <p class="links_header">Social Links</p>
-                    <i class='bx bxl-linkedin-square'></i><a href="">linkedln.com/in/codeLK</a><br><br>
-                    <i class='bx bxl-facebook-circle'></i><a href="">facebook.com/codeLK</a><br><br>
-                    <i class='bx bxl-gmail'></i><a href="">codelk@gmail.com</a>
+                <p class="links_header">Social Links</p>
+                <i class='bx bxl-linkedin-square'></i><a href="">linkedln.com/in/codeLK</a><br><br>
+                <i class='bx bxl-facebook-circle'></i><a href="">facebook.com/codeLK</a><br><br>
+                <i class='bx bxl-gmail'></i><a href="">codelk@gmail.com</a>
             </div>
             <div class="address">
                 <p class="links_header">Address</p>
-                <i class='bx bxs-map' style='color:#ffffff' ></i><a href="">No.100 <br>&nbsp;&nbsp;&nbsp;&nbsp; Colombo<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sri Lanka</a>
+                <i class='bx bxs-map' style='color:#ffffff'></i><a href="">No.100 <br>&nbsp;&nbsp;&nbsp;&nbsp;
+                    Colombo<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sri Lanka</a>
             </div>
             <div class="contact_no">
                 <p class="links_header">Contact No</p>
                 <i class='bx bxs-phone'></i><a href="">+94 77 123 4567</a>
             </div>
         </div>
-    </div>
+
+        <div class="site_links">
+
+            <dl>
+                <dt class="site_links_header">Languages</dt>
+                <ul>
+                    <li><a href="">Python</a></li>
+                    <li><a href="">C++</a></li>
+                    <li><a href="">Ruby</a></li>
+                    <li><a href="">Java</a></li>
+                    <li><a href="">Javascript</a></li>
+                    <li><a href="">HTML</a></li>
+                    <li><a href="">CSS</a></li>
+                </ul>
+            </dl>
+            <dl>
+                <dt class="site_links_header">Courses</dt>
+                <ul>
+                    <li><a href="">Web Development</a></li>
+                    <li><a href="">Data Science</a></li>
+                    <li><a href="">Software Development</a></li>
+                    <li><a href="">App Development</a></li>
+                    <li><a href="">Ui/Ux Design</a></li>
+                    <li><a href="">Cloud Computing</a></li>
+                    <li><a href="">Machine Learning</a></li>
+                </ul>
+            </dl>
+            <dl>
+                <dt class="site_links_header">Editors</dt>
+                <ul>
+                    <li><a href="">Online SQL editor</a></li>
+                    <li><a href="">Online Html editor</a></li>
+                    <li><a href="">Online Python editor</a></li>
+                    <li><a href="">Online Javascript editor</a></li>
+                </ul>
+            </dl>
+            <dl>
+                <dt class="site_links_header">Features</dt>
+                <ul>
+                    <li><a href="">CodeLK AI</a></li>
+                    <li><a href="">Coding Quizzes</a></li>
+                    <li><a href="">Chat</a></li>
+                    <li><a href="">Community</a></li>
+                    <li><a href="">Cloud Storage</a></li>
+                    <li><a href="">Mobile App</a></li>
+                </ul>
+            </dl>
+        </div>
+
 </body>
 
 
