--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <label for="Name">Username</label><br>
                     <input type="text" name="name" placeholder="Enter your username" required /><br />
                     <label for="Name">Password</label><br>
-                    <input type="text" name="password" placeholder="Enter your password" required /><br />
+                    <input type="password" name="password" placeholder="Enter your password" required /><br />
                     <div class="form_footer">
                         <h1 class="form_footer_text">Create account</h1>
                         <h1 class="form_footer_text">Forgot password ?</h1>
@@ -76,6 +76,9 @@
             </div>
         </div>
     </div>
+
+    <!---------------- THIRD PAGE---------------------->
+
     <div class="third_page">
         <h1 class="third_page_header_1">Why are you using <br>CodeLK ?</h1>
         <div class="third_container">
@@ -99,6 +102,9 @@
             </div>
         </div>
     </div>
+
+    <!----------------- FOURTH PAGE---------------------->
+
     <div class="fourth_page">
         <h1 class="fourth_page_header_1">Price</h1>
         <h1 class="fourth_page_text_1">Unlock your coding potential with our flexible pricing plans designed to fit your
@@ -150,6 +156,9 @@
         </div>
         <h1 class="fourth_page_footer">🚀 Ready to get started? Sign Up or Contact us for more information.</h1>
     </div>
+
+    <!-----------------CONTACT PAGE--------------------->
+
     <div class="contact_page">
         <h1 class="contact_page_header_1">Contact Us</h1>
         <div class="contact_info">
@@ -218,7 +227,8 @@
                 </ul>
             </dl>
         </div>
-
+    </div>
+    <footer>Designed by Dinesh Harsha</footer>
 </body>
 
 
