--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 
-    <title>Document</title>
+    <title>Code LK Online Learning Platform</title>
 </head>
 
 <body>
     <div class="main_section">
-
-        <!-- <img src="assets/360_F_286779578_lLmTnvaIP6oxRK6gTVSmxfBfw1eLUQm5-transformed 1.jpg" alt="main background" class="main_bg"> -->
 
         <nav>
             <input type="checkbox" id="check">
@@ -46,8 +44,8 @@
                 everyone!</p>
         </div>
         <div>
-            <button class="start_btn"> Get Started <i class='bx bxs-right-arrow-alt bx-fade-right-hover'
-                    id="st_btn"></i></button>
+           <a class="start" href="https://www.w3schools.com/"> <button class="start_btn"> Get Started <i class='bx bxs-right-arrow-alt bx-fade-right-hover'
+                    id="st_btn"></i></button></a>
 
         </div>
 
@@ -64,7 +62,7 @@
             </div>
             <div class="login_form">
                 <H1 class="form_header">Login</H1>
-                <form action="" method="/" id="form">
+                <form action="" method="post" id="form">
                     <label for="Name">Username</label><br>
                     <input type="text" name="name" placeholder="Enter your username" id="user" required /><br />
                     <label for="Name">Password</label><br>
